@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-16T16:24:33Z",
-  "count_outdated" : 368,
-  "uniques_outdated" : 66,
+  "timestamp" : "2022-06-17T16:23:05Z",
+  "count_outdated" : 370,
+  "uniques_outdated" : 67,
   "count" : 385,
   "uniques" : 74,
   "views" : [
-    {
-      "timestamp": "2022-06-03T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-05T00:00:00Z",
       "count": 5,
